footer spacing fixes

--- a/home.css
+++ b/home.css
@@ -448,7 +448,7 @@ justify-content:center;
 .faq {
   padding: 0 18%;
   color: #ffffff;
-  margin-bottom: 64px;
+  margin-bottom: 74px;
 }
 
 .faq h1 {
@@ -487,7 +487,7 @@ justify-content:center;
 
 .bottom_form {
   padding: 0 18%;
-  margin-bottom: 64px;
+  margin-bottom: 86px;
 }
 .bottom_form .text {
   font-size: 16px;
@@ -500,7 +500,7 @@ justify-content:center;
 }
 .footer {
   padding: 0 18%;
-  margin-bottom: 64px;
+  margin-bottom: 74px;
   color: #ffffffb3;
 }
 
@@ -532,7 +532,7 @@ justify-content:center;
 }
 
 .bottom {
-  margin-top: 42px;
+  margin-top: 64px;
 }
 
 .netflix_in {
